fix image issue on mobile device

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,7 +91,7 @@ body{
 @media (max-width : 768px){
   .hero-img {
     animation: morph 8s ease-in-out infinite;
-    background-image: url(/IM.jpg) !important;
+    background-image: url(/cropped-456.jpg) !important;
     background-position: 50% !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
